# Kraken

./: .breakpoints  .db  .env  .gitignore  .grip.bat  .grip.py  .gripbibliography.bat  .gripcode.bat  .griptesting.bat  .replit  BIBLIOGRAPHY.md  CODE.md  README.md  REPORT.md  TESTING.md  __init__.py  changes.txt  dabase diagram.drawio  db.py  db.sqlite  db.sqlite.old  dbCommands.txt  encryption.py  generator.py  index.html  loadingscreen.py  locustfile.py  loginscreen.py  main.py  mermaid-diagrams.md  models.py  package.json  pyproject.toml  pyproject.toml.ignore  requirements.txt  screen.py  signupscreen.py  stakeholders.txt
.commentary/: 2023-03-27-ANALYSIS.txt
.grip/: settings.py
.grip/cache-version/: custom.css
.ignore/: changesbycommit.txt  markdown appendix a.css  markdown appendix b.css  markdown.css  reportcontentscssgen.py
assets/log/: logger.py
assets/screen/: loadingscreen.py  loginloadingscreen.py  loginscreen.py  menuscreen.py  screen.py  signupscreen.py  sitemenuscreen.py
assets/tk/: dangerpopup.py  newsitepopup.py  popup.py  successpopup.py
data/: session.txt
static/css/: auth.css  blank.css  build.css  edit.css  home.css  (+7 more)
templates/: base.html  home-nosite.html  home-sites.html  login.html  settings-admin.html  settings-base.html  settings-code.html  settings-dev.html  settings-looks.html  settings-profile.html  settings-sites.html  signup.html  site-create-options-1.html  site-create-options-2.html  site-create-options-3.html  site-create.html  site-edit-home.html  site-edit.html  site_create_base.html
tkinter/: generator.py  main.py
(+94 files in other folders)
