[tool.poetry]
name = "Kraken"
version = "0.1.0"
description = "Python code to generate HTML, CSS, and JS code"
authors = ["tomgxz <tomgxz.dev@gmail.com>"]
license = "GPL-3.0-or-later"
readme = ["README.md","REPORT.md","CODE.md","TESTING.md","BIBLIOGRAPHY.md"]
repository = "https://github.com/Tomgxz/Kraken"
keywords = ["python","flask","website","website-builder"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.3"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.5.1"
pillow = "^10.3.0"
configparser = "^5.3.0"
datetime = "^4.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
